# linux-x11-touchpad

./: .gitignore  CMakeLists.txt  hello.cc  move.cc  run.sh
src/: Accumulator.cpp  Accumulator.h  GlideHandler.cpp  GlideHandler.h  Paint.cpp  Paint.h  Point.cpp  Point.h  ScrollGlideHandler.cpp  ScrollGlideHandler.h  ScrollHandler.cpp  ScrollHandler.h  ScrollState.h  Smoother.cpp  Smoother.h  Touch.h  TouchController.cpp  TouchController.h  TouchHistory.cpp  TouchHistory.h  TouchState.h  hello.cpp
